# authenticate-users-with-fast-api

./: .env.example  README.md  _create_db_schema.sh  _create_test_user.sh  _drop_db_schema.sh  _migration_create.sh  _migration_down.sh  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
config/: database.py  env.py
custom_types/: auth.py  user.py
migrations/: env.py
migrations/versions/: a6130d59d01a_update_user_refresh_column_to_150_.py  d0f4ef85e082_create_users_table.py
models/: __init__.py  users.py
routes/: token.py  user.py
scripts/: create_db_schema.py  create_test_user.py  drop_db_schema.py
utils/: auth.py
